--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/primary"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/slider_pager"
@@ -28,6 +28,7 @@
     </com.google.android.material.tabs.TabLayout>
 
     <TextView
+        android:textColor="#add8e6"
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,5 +45,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp" />
 </LinearLayout>
