--- a/app/src/main/res/layout/my_list_item.xml
+++ b/app/src/main/res/layout/my_list_item.xml
@@ -11,7 +11,7 @@
     android:foreground="?attr/selectableItemBackgroundBorderless">
 
     <ImageView
-        android:id="@+id/related_movie_img"
+        android:id="@+id/myList_movie_img"
         android:layout_width="120dp"
         android:layout_height="175dp"
         android:scaleType="centerCrop"
@@ -22,7 +22,7 @@
         app:srcCompat="@drawable/detail_poster" />
 
     <TextView
-        android:id="@+id/item_movie_title"
+        android:id="@+id/myList_movie_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="This is the title "
@@ -30,21 +30,34 @@
         android:textSize="30dp"
         android:layout_marginTop="15dp"
         android:layout_marginStart="10dp"
-        app:layout_constraintStart_toEndOf="@+id/related_movie_img"
+        app:layout_constraintStart_toEndOf="@+id/myList_movie_img"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/item_movie_time"
+        android:id="@+id/myList_movie_gerne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:layout_marginStart="12dp"
-        android:text="1h30m "
+        android:text="Action "
         android:textStyle="italic"
         android:textColor="#ffffff"
         android:textSize="15dp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintStart_toEndOf="@+id/related_movie_img" />
+        app:layout_constraintStart_toEndOf="@+id/myList_movie_img" />
+
+    <TextView
+        android:id="@+id/myList_movie_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginStart="12dp"
+        android:text="-  1h30m "
+        android:textStyle="italic"
+        android:textColor="#ffffff"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintStart_toEndOf="@+id/myList_movie_gerne" />
 
 
 
@@ -56,7 +69,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/related_movie_img" />
+        app:layout_constraintStart_toEndOf="@+id/myList_movie_img" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
